--- a/admin/src/main/resources/templates/base.html
+++ b/admin/src/main/resources/templates/base.html
@@ -33,6 +33,7 @@
     <script th:src="|${urlPrefix}/bootstrap/js/jquery-2.1.1.js|"></script>
     <script th:src="|${urlPrefix}/bootstrap/js/bootstrap.min.js|"></script>
     <script th:src="|${urlPrefix}/scripts/rest.js|"></script>
+    <script th:src="|${urlPrefix}/scripts/positions.js|"></script>
 </head>
 <body>
 <th:block layout:fragment="content"></th:block>
