--- a/admin/src/main/resources/templates/index.html
+++ b/admin/src/main/resources/templates/index.html
@@ -43,7 +43,7 @@
                         </ul>
                     </li>
                     <li shiro:hasAnyRoles="admin">
-                            <a href="act"><i class="fa fa-child"></i> <span class="nav-label">分账号管理</span><span class="fa arrow"></span></a>
+                            <a><i class="fa fa-child"></i> <span class="nav-label">分账号管理</span><span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li><a href="loginuser?roleType=2" target="main">系统管理员账号</a></li>
                                 <li><a href="loginuser?roleType=3" target="main">一级管理员账号</a></li>
@@ -52,7 +52,7 @@
                             </ul>
                         </li>
                     <li shiro:hasAnyRoles="admin,firstLevelAdmin">
-                        <a href="act"><i class="fa fa-shopping-cart"></i> <span class="nav-label">奖励发放</span><span class="fa arrow"></span></a>
+                        <a><i class="fa fa-shopping-cart"></i> <span class="nav-label">奖励发放</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li><a href="prizerecord?type=0" target="main">初始发放记录</a></li>
                             <li><a href="prizerecord?type=1" target="main">追加发放记录</a></li>
@@ -61,9 +61,18 @@
                         </ul>
                     </li>
                     <li shiro:hasAnyRoles="admin,firstLevelAdmin">
-                        <a href="act"><i class="fa fa-lemon-o"></i> <span class="nav-label">用户管理</span><span class="fa arrow"></span></a>
+                        <a><i class="fa fa-lemon-o"></i> <span class="nav-label">用户管理</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li><a href="reportstatistics" target="main">用户分析</a></li>
+                        </ul>
+                    </li>
+                    <li shiro:hasAnyRoles="admin">
+                        <a><i class="fa fa-lemon-o"></i> <span class="nav-label">志愿者数据管理</span><span class="fa arrow"></span></a>
+                        <ul class="nav nav-second-level">
+                            <li><a href="reporttask" target="main">志愿者数据维护</a></li>
+                            <li><a href="reporttask/new" target="main">添加志愿者数据</a></li>
+                            <li><a href="taskstatistics" target="main">个人数据统计</a></li>
+                            <li><a href="townstatistics" target="main">镇街数据统计</a></li>
                         </ul>
                     </li>
                     <li>
