--- a/admin/src/main/resources/templates/report/list.html
+++ b/admin/src/main/resources/templates/report/list.html
@@ -5,6 +5,7 @@
       layout:decorate="~{base}">
 <head>
     <link th:href="|${urlPrefix}/styles/css/index.css|" rel="stylesheet"/>
+    <style>.more-btn{float:right;}</style>
     <script type="text/javascript" th:src="|${urlPrefix}/scripts/simpletable/simpletable.js|"></script>
     <script type="text/javascript"th:src="|${urlPrefix}/scripts/index.js|"></script>
     <script type="text/javascript"th:src="|${urlPrefix}/scripts/jquery.rotate.min.js|"></script>
@@ -12,6 +13,16 @@
         $(document).ready(function () {
             // 分页需要依赖的初始化动作
             window.simpleTable = new SimpleTable('queryForm', [[${page.thisPageNumber}]], [[${page.pageSize}]], [[${query.sortColumns}]], "pageNumber");
+            $(".more-btn").click(function(){
+                var _temp=$(this).parent().next();
+                if(_temp.css("display")=="none"){
+                    $(this).text("收起");
+                    _temp.show();
+                }else{
+                    $(this).text("更多");
+                    _temp.hide();
+                }
+            });
         });
     </script>
     <style>
@@ -55,30 +66,19 @@
                                     <input type="hidden" name="status" th:value="${query.status}"/>
                                     <input type="hidden" name="roleType" th:value="${query.roleType}"/>
                                 <div class="row">
-                                    <div class="col-sm-2 m-b-xs">
+                                    <div class="col-sm-12 ">
                                         <input type="text" name="openId" th:value="${query.openId}" placeholder="请填写openid" class="input-sm form-control">
-                                    </div>
-                                    <div class="col-sm-2 m-b-xs">
                                         <input type="text" name="nickName" th:value="${query.nickName}" placeholder="请填写昵称" class="input-sm form-control">
-                                    </div>
-                                    <div class="col-sm-2 m-b-xs">
                                         <input type="text" name="realName" th:value="${query.realName}"  placeholder="请填写姓名" class="input-sm form-control">
-                                    </div>
-                                    <div class="col-sm-2 m-b-xs">
                                         <input type="text" name="mobile" th:value="${query.mobile}"  placeholder="请填写联系方式" class="input-sm form-control">
-                                    </div>
-                                    <div class="col-sm-2 m-b-xs">
                                         <input type="text" name="happenPlace" th:value="${query.happenPlace}" placeholder="请填写发生地点" class="input-sm form-control">
-                                    </div>
-                                    <div class="col-sm-2 m-b-xs" th:if="${session.user?.roleType!=0}">
                                         <select name="reportType1" class="form-control">
                                             <option value="">信息分类</option>
                                             <option th:each="obj:${reportTypeList}" th:value="${obj.typeId}" th:selected="${obj.typeId==query.reportType1}" th:text="${obj.typeName}">
                                             </option>
                                         </select>
-                                    </div>
-                                    <div class="col-sm-4 m-b-xs">
-                                        <div class="time_picker">
+                                        <input type="text" name="eventDesc" th:value="${query.eventDesc}" placeholder="请填写事件描述关键字" class="input-sm form-control">
+                                        <div class="time_picker" style="display: inline-block;">
                                             <input type="checkbox" class="cbr" name="byTime" th:checked="${query.byTime}">
                                             <input name="startTimeStr" class="start" type="hidden"
                                                    th:value="${query.startTime}?${#dates.format(query.startTime*1000,'yyyy-MM-dd HH:mm')}" />
@@ -92,14 +92,9 @@
                                                 </button>
                                             </div>
                                         </div>
+                                        <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-search"></i><span>搜索</span></button>
+                                        <button class="btn btn-sm btn-primary" type="button" id="export"><i class="fa fa-download"></i><span>导出</span></button>
                                     </div>
-                                    <div class="col-sm-2 m-b-xs">
-                                        <input type="text" name="eventDesc" th:value="${query.eventDesc}" placeholder="请填写事件描述关键字" class="input-sm form-control">
-                                    </div>
-
-                                    <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-search"></i><span>搜索</span></button>
-                                    <button class="btn btn-sm btn-primary" type="button" id="export"><i class="fa fa-download"></i><span>导出</span></button>
-
                                 </div>
                                 <div class="row">
                                     <div class="col-sm-12">
@@ -107,23 +102,16 @@
                                             <table class="table table-striped table-bordered table-hover dataTable">
                                                 <thead>
                                                 <tr>
-                                                    <th class="wrap-th">
-                                                        openid
+                                                    <th style="width:100px;">
+                                                        个人信息
                                                     </th>
-                                                    <th>微信昵称</th>
                                                     <th sortColumn="createTime">
                                                         信息提交时间
-                                                    </th>
-                                                    <th >
-                                                        姓名
-                                                    </th>
-                                                    <th class="wrap-th">
-                                                        联系方式
                                                     </th>
                                                     <th sortColumn="happenTime">
                                                         发生时间
                                                     </th>
-                                                    <th >
+                                                    <th>
                                                         发生地点
                                                     </th>
                                                     <th >
@@ -141,7 +129,7 @@
                                                     <th shiro:hasAnyRoles="admin,firstLevelAdmin" th:if="${isShow}">
                                                         发放奖励
                                                     </th>
-                                                    <th >
+                                                    <th style="width:100px;">
                                                         操作
                                                     </th>
                                                     <th shiro:hasAnyRoles="admin,firstLevelAdmin" >
@@ -154,11 +142,15 @@
                                                 </thead>
                                                 <tbody>
                                                 <tr th:each="item:${page.result}">
-                                                    <td th:text="${item.fans?.openId}" class="wrap-th"></td>
-                                                    <td th:text="${item.fans?.nickName}"></td>
+                                                    <td style="width:100px;">
+                                                        <div>
+                                                            <label>姓名：</label>[[${item.isHide==1?'匿名':item.fans?.realName}]]<br/>
+                                                            <label>联系方式：</label>[[${item.isHide==1?'匿名':item.fans?.mobile}]]<br/>
+                                                            <label>openid：</label>[[${item.fans?.openId}]]<br/>
+                                                            <label>微信昵称：</label>[[${item.fans?.nickName}]]<br/>
+                                                        </div>
+                                                    </td>
                                                     <td th:text="${#dates.format(item.createTime*1000,'yyyy-MM-dd HH:mm:ss')}"></td>
-                                                    <td th:text="${item.isHide==1?'匿名':item.fans?.realName}"></td>
-                                                    <td th:text="${item.isHide==1?'匿名':item.fans?.mobile}" class="wrap-th"></td>
                                                     <td th:text="${#dates.format(item.happenTime*1000,'yyyy-MM-dd HH:mm:ss')}"></td>
                                                     <td th:text="${item.happenPlace}"></td>
                                                     <td>
