--- a/admin/src/main/resources/templates/loginuser/list.html
+++ b/admin/src/main/resources/templates/loginuser/list.html
@@ -122,7 +122,7 @@
                     method:"post",
                     success:function (data) {
                         if (data.success==true){
-                            alert("重置成功，重置后的密码为初始密码admin123！");
+                            modelshow("重置成功，重置后的密码为初始密码admin123");
                         }
                     }
                 });
