--- a/admin/src/main/resources/templates/index.html
+++ b/admin/src/main/resources/templates/index.html
@@ -40,6 +40,7 @@
                         <ul class="nav nav-second-level">
                             <li><a href="reporttype" target="main">分类列表</a></li>
                             <li><a href="reporttype/new" target="main">创建分类</a></li>
+                            <li><a href="globalsetting/edit" target="main">奖励发放设置</a></li>
                         </ul>
                     </li>
                     <li shiro:hasAnyRoles="admin">
@@ -56,7 +57,6 @@
                         <ul class="nav nav-second-level">
                             <li><a href="prizerecord?type=0" target="main">初始发放记录</a></li>
                             <li><a href="prizerecord?type=1" target="main">追加发放记录</a></li>
-                            <li><a href="globalsetting/edit" target="main">奖励发放设置</a></li>
                             <li><a href="reporttype/list" target="main">追加奖励发放标准</a></li>
                         </ul>
                     </li>
@@ -66,7 +66,7 @@
                             <li><a href="reportstatistics" target="main">用户分析</a></li>
                         </ul>
                     </li>
-                    <li shiro:hasAnyRoles="admin">
+                    <li shiro:hasAnyRoles="admin,firstLevelAdmin">
                         <a><i class="fa fa-lemon-o"></i> <span class="nav-label">志愿者数据管理</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li><a href="reporttask" target="main">志愿者数据维护</a></li>
