--- a/admin/src/main/resources/templates/login.html
+++ b/admin/src/main/resources/templates/login.html
@@ -28,7 +28,7 @@
                     <img id="cap_img" src="getKaptcha" alt="" class="loginImg"/>
                     <span id="kaptcha_span" style="cursor: pointer;">看不清楚，换一张</span>
                 </div>
-                <button type="submit" class="btn btn-primary block full-width m-b">登陆</button>
+                <button type="submit" class="btn btn-primary block full-width m-b">登录</button>
             </form>
         </div>
     </div>
