--- a/mobile/src/main/resources/templates/index.html
+++ b/mobile/src/main/resources/templates/index.html
@@ -40,7 +40,7 @@
 
             <div class="click_btn" id="join_btn">我要参与</div>
             <a href="javascript:void(0);" th:href="|reportList?openId=${fans?.openId}|">个人中心</a>
-            <a href="https://mp.weixin.qq.com/s?__biz=MjM5NDExMzgwNw==&mid=504057711&idx=2&sn=80982e9cfcc780760904da47c5794c78&chksm=3d735f0f0a04d6195474e24b56f297676c786a6f96b5712b90cee238f46e6ed16ace695e7505&mpshare=1&scene=1&srcid=10179OwcojKcigOnLiBT0EMs#rd">使用说明</a>
+            <a href="https://mp.weixin.qq.com/s/r4qfbMOCatM1Hkn_1YYomQ">使用说明</a>
 
         </div>
     </div>
