--- a/mobile/src/main/resources/templates/share_js.html
+++ b/mobile/src/main/resources/templates/share_js.html
@@ -1,7 +1,7 @@
 <script type="text/javascript" src="//res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
 <script>
     $(function(){
-        pushHistory();
+        //pushHistory();
         var bool=false;
         setTimeout(function(){
             bool=true;
